--- a/src/main/resources/application-elastic.properties
+++ b/src/main/resources/application-elastic.properties
@@ -1,9 +1,14 @@
 ##MongoDB-Param
-elastic.db.cluster-name=elasticsearch
+elastic.db.cluster-name=docker-cluster
 elastic.db.host=localhost
 elastic.db.port=9200
 elastic.db.username=root
 elastic.db.password=example
+##Spring-Data-Elastic-Config:
 #spring.data.elasticsearch.cluster-name=${elastic.db.cluster-name}
-spring.data.elasticsearch.cluster-nodes=${elastic.db.host}:${elastic.db.port}
+#spring.data.elasticsearch.cluster-nodes=${elastic.db.host}:${elastic.db.port}
 spring.data.elasticsearch.repositories.enabled=true
+spring.elasticsearch.uris=http://${elastic.db.host}:${elastic.db.port}
+spring.elasticsearch.connection-timeout=5s
+#spring.elasticsearch.username=${elastic.db.username}
+#spring.activemq.password=${elastic.db.password}
