--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,4 +19,4 @@ app.disable.security=true
 #app.upload.dir=/Users/${USER}/Downloads
 #For-Windows:
 app.home.logs=/Users/Logs
-app.upload.dir=/Users/Downloads
+app.upload.dir=/Users/Public/Downloads
