--- a/src/main/resources/application-elastic.properties
+++ b/src/main/resources/application-elastic.properties
@@ -5,8 +5,8 @@ elastic.db.port=9200
 elastic.db.username=root
 elastic.db.password=example
 ##Spring-Data-Elastic-Config:
-#spring.data.elasticsearch.cluster-name=${elastic.db.cluster-name}
-#spring.data.elasticsearch.cluster-nodes=${elastic.db.host}:${elastic.db.port}
+#spring.data.elasticsearch.cluster-name=${elastic.db.cluster-name} #Deprecated
+#spring.data.elasticsearch.cluster-nodes=${elastic.db.host}:${elastic.db.port} #Deprecated
 spring.data.elasticsearch.repositories.enabled=true
 spring.elasticsearch.uris=http://${elastic.db.host}:${elastic.db.port}
 spring.elasticsearch.connection-timeout=5s
