--- a/src/main/resources/application-elastic.properties
+++ b/src/main/resources/application-elastic.properties
@@ -3,7 +3,7 @@ elastic.db.cluster-name=docker-cluster
 elastic.db.host=localhost
 elastic.db.port=9200
 elastic.db.username=root
-elastic.db.password=example
+elastic.db.password=root@123
 ##Spring-Data-Elastic-Config:
 #spring.data.elasticsearch.cluster-name=${elastic.db.cluster-name} #Deprecated
 #spring.data.elasticsearch.cluster-nodes=${elastic.db.host}:${elastic.db.port} #Deprecated
